--- a/T01_Layout/app/src/main/res/layout/activity_main2.xml
+++ b/T01_Layout/app/src/main/res/layout/activity_main2.xml
@@ -9,4 +9,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.c.t01_layout.Main2Activity">
 
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
+    <Button
+        android:text="OK"
+        android:layout_toRightOf="@id/editText1"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:layout_below="@id/editText1"
+        android:id="@+id/editText2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
+    <Button
+        android:text="Cancel"
+        android:layout_alignTop="@id/editText2"
+        android:layout_toRightOf="@id/editText2"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
